docs-archive/apache-airflow-providers-amazon/9.34.0/_sources/_api/airflow/providers/amazon/aws/triggers/ecs/index.rst.txt
airflow.providers.amazon.aws.triggers.ecs
=========================================

.. py:module:: airflow.providers.amazon.aws.triggers.ecs


Classes
-------

.. autoapisummary::

   airflow.providers.amazon.aws.triggers.ecs.ClusterActiveTrigger
   airflow.providers.amazon.aws.triggers.ecs.ClusterInactiveTrigger
   airflow.providers.amazon.aws.triggers.ecs.TaskDoneTrigger


Module Contents
---------------

.. py:class:: ClusterActiveTrigger(cluster_arn, waiter_delay, waiter_max_attempts, aws_conn_id, region_name = None, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`


   Polls the status of a cluster until it's active.

   :param cluster_arn: ARN of the cluster to watch.
   :param waiter_delay: The amount of time in seconds to wait between attempts.
   :param waiter_max_attempts: The number of times to ping for status.
       Will fail after that many unsuccessful attempts.
   :param aws_conn_id: The Airflow connection used for AWS credentials.
   :param region_name: The AWS region where the cluster is located.


   .. py:method:: hook()

      Override in subclasses to return the right hook.



.. py:class:: ClusterInactiveTrigger(cluster_arn, waiter_delay, waiter_max_attempts, aws_conn_id, region_name = None, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`


   Polls the status of a cluster until it's inactive.

   :param cluster_arn: ARN of the cluster to watch.
   :param waiter_delay: The amount of time in seconds to wait between attempts.
   :param waiter_max_attempts: The number of times to ping for status.
       Will fail after that many unsuccessful attempts.
   :param aws_conn_id: The Airflow connection used for AWS credentials.
   :param region_name: The AWS region where the cluster is located.


   .. py:method:: hook()

      Override in subclasses to return the right hook.



.. py:class:: TaskDoneTrigger(cluster, task_arn, waiter_delay, waiter_max_attempts, aws_conn_id, region_name = None, log_group = None, log_stream = None, verify = None, botocore_config = None, region = None, log_region_name = None)

   Bases: :py:obj:`airflow.triggers.base.BaseTrigger`


   Waits for an ECS task to be done, while eventually polling logs.

   :param cluster: short name or full ARN of the cluster where the task is running.
   :param task_arn: ARN of the task to watch.
   :param waiter_delay: The amount of time in seconds to wait between attempts.
   :param waiter_max_attempts: The number of times to ping for status.
       Will fail after that many unsuccessful attempts.
   :param aws_conn_id: The Airflow connection used for AWS credentials.
   :param region_name: The AWS region where the cluster is located. Used to build the hook.
   :param log_region_name: The AWS region where the CloudWatch logs are stored. Defaults to
       ``region_name`` when not set, which is correct unless the task definition ships its logs
       to another region.
   :param verify: Whether or not to verify SSL certificates. Used to build the hook.
   :param botocore_config: Configuration dictionary for the botocore client. Used to build the hook.
   :param region: (deprecated) use ``region_name`` instead.


   .. py:attribute:: cluster


   .. py:attribute:: task_arn


   .. py:attribute:: waiter_delay


   .. py:attribute:: waiter_max_attempts


   .. py:attribute:: aws_conn_id


   .. py:attribute:: region_name
      :value: None



   .. py:attribute:: verify
      :value: None



   .. py:attribute:: botocore_config
      :value: None



   .. py:attribute:: log_group
      :value: None



   .. py:attribute:: log_stream
      :value: None



   .. py:attribute:: log_region_name
      :value: None



   .. py:method:: serialize()

      Return the information needed to reconstruct this Trigger.

      :return: Tuple of (class path, keyword arguments needed to re-instantiate).



   .. py:method:: run()
      :async:


      Run the trigger in an asynchronous context.

      The trigger should yield an Event whenever it wants to fire off
      an event, and return None if it is finished. Single-event triggers
      should thus yield and then immediately return.

      If it yields, it is likely that it will be resumed very quickly,
      but it may not be (e.g. if the workload is being moved to another
      triggerer process, or a multi-event trigger was being used for a
      single-event task defer).

      In either case, Trigger classes should assume they will be persisted,
      and then rely on cleanup() being called when they are no longer needed.



